# R-Type

./: .clang-format  .clang-tidy  .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  conanfile.txt  docker-compose.yml  index.html  r-type.sql  sitemap.xml
src/: CMakeLists.txt
src/client/: CMakeLists.txt  components.h  game_scene_loader.cpp  load_audio_settings_scene.cpp  load_difficulty_settings_scene.cpp  load_gamepad_settings_menu_scene.cpp  load_graphics_settings_scene.cpp  load_keyboard_settings_menu_scene.cpp  lobby_scene_loader.cpp  main.cpp  main_menu_scene_loader.cpp  multiplayer_game_scene_loader.cpp  network_client.cpp  network_client.h  scenes_loaders.h  server_connection_scene_loader.cpp  servers_scene_loader.cpp  settings_audio_scene_loader.cpp  settings_gamepad_menu_scene_loader.cpp  settings_menu_scene_loader.cpp
src/client/systems/: apply_server_updates_system.cpp  bulletSystem.cpp  client_systems.h  collisionSystem.cpp  enemyMovementSystem.cpp  enemySystem.cpp  explosionSystem.cpp  handle_connection_menu_ui_events.cpp  handle_difficulty_settings_menu_ui_events.cpp  handle_game_pause_inputs.cpp  handle_game_ui_events.cpp  handle_gamepad_menu_ui_events.cpp  handle_gamepad_settings_menu_events.cpp  handle_graphics_settings_menu_ui_events.cpp  handle_keyboard_settings_menu_ui_events.cpp  handle_lobby_ui_events.cpp  handle_main_menu_ui_events.cpp  handle_menu_ui_events.cpp  handle_servers_ui_events.cpp  handle_settings_menu_ui_events.cpp  handle_volume_menu_ui_events.cpp  particleEmmissionSystem.cpp  playerControlSystem.cpp  predict_local_player_system.cpp  renderSystem.cpp  send_input_system.cpp  starScrollSystem.cpp
src/ecs/: CMakeLists.txt  ecs.cpp  entity.cpp  entity.h  registry.cpp  registry.h  registry.tcc  sparse_array.h  sparse_array.tcc  tag_registry.cpp  tag_registry.h  zipper.h  zipper.tcc
src/game engine/components/: velocity.h
src/game engine/ecs/: ecs.h  registry.h  zipper.tcc
src/game_engine/: CMakeLists.txt  assets_manager.cpp  assets_manager.h  assets_manager.tcc  component_package.h  component_type_to_type_index_map.cpp  controls.h  engine.cpp  engine.h  engine.tcc  entity.cpp  entity.hpp  lua_context.cpp  lua_context.h  network_client.cpp  network_client.h  snapshots.cpp  snapshots.h
src/game_engine/api/: expose_components.cpp  load_scripts.cpp  lua.h  lua_api_entry.h  lua_api_entry.tcc  lua_func_list.cpp
src/game_engine/api/func/: create_ui_button.cpp  create_ui_input_field.cpp  create_ui_text.cpp  set_ui_navigation.cpp  set_ui_style.cpp  set_ui_text.cpp  set_ui_transform.cpp
src/game_engine/components/: UITransform.h  boss.cpp  boss.h  boss_hitbox.cpp  boss_hitbox.h  bullet.cpp  bullet.h  bullet_shooter.cpp  bullet_shooter.h  components.h  controllable.cpp  controllable.h  drawable.h  enemy.cpp  enemy.h  entity_type.cpp  entity_type.h  explosion.cpp  explosion.h  health.cpp  health.h  hitbox.cpp  hitbox.h  i_sync_component.h  movement_pattern.cpp  movement_pattern.h  particle.h  player.cpp  player.h  replicated.cpp  replicated.h  scene.h  shooter.cpp  shooter.h  snapshot_meta.h  sprite.h  star.h  stats.cpp  stats.h  tag.cpp  (+10 more)
src/game_engine/components/ui/: ui_button.h  ui_checkbox.h  ui_clip.h  ui_dropdown.h  ui_focusable.h  ui_input_field.h  ui_interactable.h  ui_navigation.h  ui_parent.h  ui_scroll_area.h  ui_slider.h  ui_style.h  ui_text.h  (+1 more)
src/game_engine/ecs/: CMakeLists.txt  ecs.cpp  ecs.h  ecs.hpp  registry.cpp  registry.h  registry.hpp  registry.tcc  sparse_array.h  sparse_array.hpp  sparse_array.tcc  zipper.h  zipper.tcc
src/game_engine/events/: controller_events.h  event_queue.h  event_queue.tcc  events.h  keyboard_events.h  mouse_events.h  ui_events.h
src/game_engine/lua/: create_button.cpp  lua_functions.h
src/game_engine/systems/: boss_system.cpp  bulletSystem.cpp  bullet_shooter_system.cpp  bullet_system.cpp  clear_tombstones_system.cpp  collisionSystem.cpp  collision_system.cpp  create_snapshot_system.cpp  enemyMovementSystem.cpp  enemySystem.cpp  enemy_movement_system.cpp  enemy_system.cpp  explosionSystem.cpp  explosion_system.cpp  fetch_inputs.cpp  handle_snapshots_deltas_system.cpp  log_inputs.cpp  manage_ui_events.cpp  particleEmissionSystem.cpp  particle_emission_system.cpp  playerControlSystem.cpp  player_control_system.cpp  renderSystem.cpp  render_system.cpp  resolve_player_input.cpp  send_snapshot_to_client_system.cpp  shooter_movement_system.cpp  shooter_system.cpp  starScrollSystem.cpp  star_scroll_system.cpp  stat_system.cpp  systems.h  ui_background_renderer.cpp  ui_button_renderer.cpp  ui_hover.cpp  ui_input_field_updater.cpp  ui_navigation.cpp  ui_press.cpp  ui_scroll_area.cpp  ui_text_renderer.cpp  (+2 more)
src/networking/: CMakeLists.txt  networking.cpp  networking.h
src/networking/handshake/: handshake.cpp  handshake.h
src/networking/lobby/: lobby_messages.cpp  lobby_messages.h
src/networking/rtp/: networking.h  packet.cpp  reliability.cpp  session.cpp  udp_transport.cpp
src/server/: CMakeLists.txt  admin_http_server.cpp  admin_http_server.h  backend_api_client.cpp  backend_api_client.h  lobby_ipc.cpp  lobby_ipc.h  lobby_manager.cpp  lobby_manager.h  lobby_scene_loader.cpp  main.cpp  network_server.cpp  network_server.h  scenes_loaders.h  server_loader.cpp
src/server/systems/: server_bullet_shooter_system.cpp  server_bullet_system.cpp  server_collision_system.cpp  server_enemy_movement_system.cpp  server_enemy_system.cpp  server_player_control_system.cpp  server_shooter_movement_system.cpp  server_shooter_system.cpp  server_stat_system.cpp  server_update_player_entities_system.cpp  systems.h
src/utils/: CMakeLists.txt  color.h  formatters.h  logger.h  position_3d.h
tests/ecs/: CMakeLists.txt  test_registry_advanced.cpp  test_registry_component.cpp  test_registry_entity.cpp  test_sparse_array.cpp  test_tag_registry.cpp  test_zipper.cpp
tests/networking/: CMakeLists.txt
tests/networking/handshake/: handshake_test.cpp
tests/networking/lobby/: lobby_messages_test.cpp
tests/networking/rtp/: integration_test.cpp  packet_test.cpp  reliability_test.cpp
(+1571 files in other folders)
